fix overflow property for older broswer

--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@
 }
 
 .hidden{
-  overflow: hidden;
+  position: relative;
+  overflow-y: hidden;
 }
 
 header {
